boot/tests/errors/module_no_leak/module_no_leak.c
#error module_no_leak:8:3 Undefined variable f1

